# HQCoreS3-Dog

./: CMakeLists.txt  cp2win.sh  partitions.csv  sdkconfig  sdkconfig-faceRecognize  sdkconfig-勉强使用完整-看门狗频繁触发  sdkconfig-原始  sdkconfig.old
components/esp-dl/examples/cat_face_detect/main/: CMakeLists.txt  app_main.cpp  image.hpp
components/esp-dl/examples/color_detect/main/: CMakeLists.txt  app_main.cpp  image.hpp
components/esp-dl/examples/face_recognition/main/: CMakeLists.txt  app_main.cpp  image.hpp
components/esp-dl/examples/human_face_detect/main/: CMakeLists.txt  app_main.cpp  image.hpp
components/esp-dl/tools/quantization_tool/: requirements.txt
components/esp32-camera/driver/: esp_camera.c
components/lvgl/: lv_conf.h
components/lvgl_esp32_drivers/: lvgl_helpers.h  lvgl_spi_conf.h
components/lvgl_esp32_drivers/lvgl_tft/: st7789.c
components/modules/: CMakeLists.txt
components/modules/ai/: who_ai_utils.cpp  who_human_face_detection.cpp  who_human_face_recognition.cpp
components/modules/button/: who_adc_button.c
components/modules/camera/: who_camera.c  who_camera.h
components/modules/lcd/: who_lcd.c  who_lcd.h
components/modules/web/: app_httpd.cpp  app_wifi.c
components/modules/web/www/: index_ov2640.html
components/screen/controller_driver/ili9341/: ili9341.c
components/uart-rt/: CMakeLists.txt  uart-rt.c  uart-rt.h
main/: CMakeLists.txt  app_led.c  app_speech_comm.h  app_speech_queue.c  app_speech_recsrc.c  app_speech_srcif.h  app_speech_wakeup.c  esp32-dog.cpp  page_wakeup.c  page_wakeup.h  wav_player.c  wav_player.h
(+6 files in other folders)
